[build-system]
requires = ["hatchling>=1.24.2", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "lmdb_cache"
description = "LMDB cache which supports multiprocessing"
version = "1.1.3"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "lmdb",
    "dill",
    "zstandard",
    "more-itertools"
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.26.0",
    "ruff>=0.5.6",
    "pip",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["lmdb_cache"]
