[metadata]
name = lmdb_cache
description = LMDB cache which supports multiprocessing
version = 1.0.0
author = Vadym Stupakov
author_email = vadim.stupakov@gmail.com
mainteiner = Vadym Stupakov
maintainer_email = vadim.stupakov@gmail.com
url = https://github.com/Red-Eyed/lmdb_cache

[options]
install_requires =
    lmdb
    dill
    brotli

[flake8]
max-line-length = 120
ignore =
    W605,F541

enable =
    W0614

optional-ascii-coding = True
